@@ -75,6 +75,7 @@ version <next>:
 - ffmpeg -copytb option added
 - IVF muxer added
 - Wing Commander IV movies decoder added
+- movie source added
 
 
 version 0.6:
